{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 509,
  "lineage": "6b045c8b-d44f-ded4-1e1f-b4ecf4ce667f",
  "resources": [
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EKS_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:internet-gateway/igw-04d49ab96c6aa186d",
            "id": "igw-04d49ab96c6aa186d",
            "owner_id": "058264484352",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "eks-igw",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-igw",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "EKS_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:route-table/rtb-07a2b7a7944ba4f93",
            "id": "rtb-07a2b7a7944ba4f93",
            "owner_id": "058264484352",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d49ab96c6aa186d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-rt",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-rt",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "rtb-07a2b7a7944ba4f93",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_internet_gateway.EKS_IGW",
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a7e78f7d0a43538",
            "region": "us-west-2",
            "route_table_id": "rtb-07a2b7a7944ba4f93",
            "subnet_id": "subnet-0c39cd6c3c5b75f08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Cluster.aws_internet_gateway.EKS_IGW",
            "module.Cluster.aws_route_table.EKS_RT",
            "module.Cluster.aws_subnet.public_subnet_1",
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdf799873c249d7f",
            "region": "us-west-2",
            "route_table_id": "rtb-07a2b7a7944ba4f93",
            "subnet_id": "subnet-04e84139d21ec5fb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Cluster.aws_internet_gateway.EKS_IGW",
            "module.Cluster.aws_route_table.EKS_RT",
            "module.Cluster.aws_subnet.public_subnet_2",
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:security-group/sg-0a68db9a055b3e287",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a68db9a055b3e287",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from EKS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0835077bca95b7920"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "058264484352",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "tags_all": {
              "Environment": "dev",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "timeouts": null,
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "sg-0a68db9a055b3e287",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_eks_cluster.cluster",
            "module.Cluster.aws_iam_role.eks_cluster_role",
            "module.Cluster.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.Cluster.aws_subnet.private_subnet_1",
            "module.Cluster.aws_subnet.private_subnet_2",
            "module.Cluster.aws_subnet.public_subnet_1",
            "module.Cluster.aws_subnet.public_subnet_2",
            "module.Cluster.aws_vpc.EKS_VPC",
            "module.Cluster.data.aws_eks_cluster.eks"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:subnet/subnet-005d70ee31c5d9140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005d70ee31c5d9140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264484352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "EKS_PRIVATE_SUB1",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "EKS_PRIVATE_SUB1",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "subnet-005d70ee31c5d9140",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:subnet/subnet-01e8c384385fef2ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8c384385fef2ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264484352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "EKS_PRIVATE_SUB2",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "EKS_PRIVATE_SUB2",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "subnet-01e8c384385fef2ae",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:subnet/subnet-0c39cd6c3c5b75f08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c39cd6c3c5b75f08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264484352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "EKS_PUBLIC_SUB1",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "EKS_PUBLIC_SUB1",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "subnet-0c39cd6c3c5b75f08",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:subnet/subnet-04e84139d21ec5fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e84139d21ec5fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264484352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "EKS_PUBLIC_SUB2",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "EKS_PUBLIC_SUB2",
              "Owner": "team-devops",
              "Project": "myproject",
              "kubernetes.io/cluster/dev-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0896e98c1555622f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "subnet-04e84139d21ec5fb4",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.Cluster.aws_vpc.EKS_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.Cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EKS_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:058264484352:vpc/vpc-0896e98c1555622f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a0a03fb5b818c37",
            "default_route_table_id": "rtb-0ce16c92e33eadc07",
            "default_security_group_id": "sg-0d59840ad109cd4f9",
            "dhcp_options_id": "dopt-06b81497d69c0d0e8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0896e98c1555622f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce16c92e33eadc07",
            "owner_id": "058264484352",
            "region": "us-west-2",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Owner": "team-devops",
              "Project": "myproject"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Owner": "team-devops",
              "Project": "myproject"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264484352",
            "id": "vpc-0896e98c1555622f7",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}